...
          ),
        }}
      />
      <Tabs.Screen
        name="you"
        options={{
          title: t({ context: "tab", message: "You" }),
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name="you" color={color} focused={focused} />
          ),
        }}
      />
    </Tabs>
...
